--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(laba1.1 lab1/task1/task1.c)
 add_executable(laba1.7 lab1/task7/task7.c)
+add_executable(laba1.2 lab1/task2/task2.c)
